--- a/pages/products_Mercado.html
+++ b/pages/products_Mercado.html
@@ -13,7 +13,7 @@
 		<div id="store-Container">
 			<nav id="store-NavBar">
 				<ul>
-					<li><a href="../index_Mercado.html"><b>Back to Home</b></a></li>
+					<li><a href="../index.html"><b>Back to Home</b></a></li>
 					<li><a href="registration_Mercado.html"><b>Registration</b></a></li>
 					<li><a href="references_Mercado.html"><b>References</b></a></li>
 				</ul>
